# customer-care-ai

./: .dockerignore  .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.actions  LICENSE  Makefile  PROBLEMS_FOUND.md  README.md  actions.py  analyze_conversations.py  build.sh  cloudbuild.yaml  cloudrun.yaml  config.yml  conversation_analysis_report.md  create-trigger-request.json  docker-compose.prod.yml  docker-compose.yml  domain.yml  endpoints.yml  entrypoint.sh  migration.env.example  mypy.ini  new-trigger-config.json  pyproject.toml  rasa_dashboard.py  render-build.sh  render.yaml  requirements-dev.txt  requirements.txt  run.sh  run_migration.sh  setup.py  setup.sh  (+13 more)
Dockerfile/: Dockerfile.actions  Dockerfile.rasa  docker-compose.prod.yml  docker-compose.yml
actions/: __init__.py  actions.py
archive/: actions.py  analytics_dashboard.py
backend/: README.md  actions.py  analytics_dashboard.py  cloud_logging_setup.py  config.yml  credentials.yml  dashboard_app.py  data_loader.py  deploy_to_cloud_run.sh  domain.yml  endpoints.yml  fix_nlu_format.py  fix_rasa_issues.sh  fix_rasa_issues_updated.sh  fix_rasa_training.sh  gcloud_integration.sh  improved_start_rasa_shell.sh  language_detector.py  rasa_dashboard.py  rasa_watchdog.sh  start_actions.sh  start_rasa_shell.sh  supabase_client.py  sync_logs_to_gcs.sh  test_conversations.sh  tinydb_tracker_store.py  train_pipeline.sh  visualization.py
chatbot-project/: config.yml  credentials.yml  domain.yml  endpoints.yml
dashboard/: README.md  (+2 more)
(+213 files in other folders)
